tests/units/ill-typed/bad_ignore.saul
language core;

fn ignore(_ : Nat) -> Unit {
  return 0
}

fn main(x : Nat) -> Nat {
	return x 		 
}